Add branch for five.localsitemanager

--- a/sources.cfg
+++ b/sources.cfg
@@ -30,3 +30,4 @@ Products.ExternalMethod = svn ${buildout:svn-zope-org}/Products.ExternalMethod/t
 Products.MailHost = svn ${buildout:svn-zope-org}/Products.MailHost/trunk
 Products.PythonScripts = svn ${buildout:svn-zope-org}/Products.PythonScripts/trunk
 Products.StandardCacheManagers = svn ${buildout:svn-zope-org}/Products.StandardCacheManagers/trunk
+five.localsitemanager = svn ${buildout:svn-zope-org}/five.localsitemanager/branches/elro-parent-pointers
