--- a/sources.cfg
+++ b/sources.cfg
@@ -22,6 +22,7 @@ tempstorage = svn ${buildout:svn-zope-org}/tempstorage/trunk
 zExceptions = svn ${buildout:svn-zope-org}/zExceptions/trunk
 zLOG = svn ${buildout:svn-zope-org}/zLOG/trunk
 ZopeUndo = svn ${buildout:svn-zope-org}/ZopeUndo/trunk
+WebOb = git git@github.com:zopefoundation/webob.git branch=garbas-usefull-stuff-from-zope2-request
 
 # Deprecated / CMF dependencies
 Products.BTreeFolder2 = svn ${buildout:svn-zope-org}/Products.BTreeFolder2/trunk
