Use my fork of ZCatalog, so that I can correct the failing tests.
I was previously going to ignore the failing ZCatalog tests, but now
ZCatalog is failing the OFS Application tests. So… Yeah, I've gotta
fixor it now.

--- a/sources.cfg
+++ b/sources.cfg
@@ -15,7 +15,7 @@ MultiMapping = svn ${buildout:svn-zope-org}/MultiMapping/trunk
 nt_svcutils = svn ${buildout:svn-zope-org}/nt_svcutils/trunk
 Persistence = svn ${buildout:svn-zope-org}/Persistence/trunk
 Products.OFSP = svn ${buildout:svn-zope-org}/Products.OFSP/trunk
-Products.ZCatalog = svn ${buildout:svn-zope-org}/Products.ZCatalog/trunk
+Products.ZCatalog = git git@github.com:pumazi/Products.ZCatalog.git
 Products.ZCTextIndex = svn ${buildout:svn-zope-org}/Products.ZCTextIndex/trunk
 Record = svn ${buildout:svn-zope-org}/Record/trunk
 tempstorage = svn ${buildout:svn-zope-org}/tempstorage/trunk
